--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 @config "../../tailwind.config.ts";
-
+@import "tailwindcss/preflight"
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
